navigation vertical align, menu scroll and input borders are fixed as per figma

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,7 +35,7 @@ $bulk-pro-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+// html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 /* Importing Bootstrap SCSS file. */
@@ -187,14 +187,20 @@ background-color: #7B42AC;
 // mat-sidenav-container {
 //   height: 100%;
 // }
-.mat-sidenav-container {
+.mat-sidenav-container.mat-drawer-container {
   background: #F2F2FF;
-  height: 100%;
+  overflow: auto !important;
+  min-height: calc(100vh - 64px);
+}
 
+
+.mat-drawer-container.mat-sidenav-container.mat-drawer-container-has-open {
+  overflow: hidden;
 }
-.mat-drawer-inner-container{
-  overflow: hidden !important;
-}
+
+// .mat-drawer-inner-container{
+//   overflow: hidden !important;
+// }
 .mat-drawer {
   background: #F2F2FF;
 }
@@ -743,6 +749,14 @@ span.mat-select-min-line {
    color: #090948;
 }
 
+.mat-form-field-appearance-outline .mat-form-field-outline-start {
+  border-radius: 8px 0 0 8px !important;
+}
+
+.mat-form-field-appearance-outline .mat-form-field-outline-end {
+  border-radius: 0 8px 8px 0 !important;
+}
+
 
 
 // .mat-form-field-appearance-fill.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label, .mat-form-field-appearance-fill.mat-form-field-can-float .mat-input-server:focus+.mat-form-field-label-wrapper .mat-form-field-label {
@@ -953,8 +967,8 @@ table.g-card-table th.mat-header-cell {
   border: 1px solid #D7D7F9;
 }
 
-.mat-drawer-content{
-  overflow: initial;
+.mat-sidenav-content, .mat-drawer-content{
+  overflow: initial !important;
 }
 
 table {
@@ -1286,6 +1300,20 @@ span.menu-title-dot {
 
 .header-profile-menu .mat-menu-item .mat-icon {
   margin-right: 0;
+}
+
+.app-header {
+  position: relative;
+  top: 0;
+  height: 64px;
+  width: 100%;
+  left: 0;
+  z-index: 999;
+  background: #0a0b43;
+}
+
+.app-header .menu-title-wrap {
+  margin-top: 0.2em;
 }
 
 @media (max-width: 360px) {
